# talna

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
benches/: talna.rs
billion/: .gitignore  Cargo.toml
billion/src/: main.rs
src/: constants.rs  db.rs  db_builder.rs  duration.rs  error.rs  granularity.rs  lib.rs  main.rs  merge.rs  metric_name.rs  reader.rs  series_key.rs  smap.rs  tag_index.rs  tag_sets.rs  time.rs
src/agg/: avg.rs  builder.rs  count.rs  group.rs  max.rs  min.rs  mod.rs  stream.rs  sum.rs
src/query/: filter.rs  lexer.rs  mod.rs
src/query/parser/: mod.rs  span.rs  tag.rs  tag_value.rs
