[package]
name = "talna"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
byteorder = "1.5.0"
env_logger = "0.11.3"
fjall = { path = "../fjall", default-features = false, features = [
  "miniz",
  "lz4",
  "single_writer_tx",
] }
log = "0.4.22"
logos = "0.14.0"
regex = "1.10.5"
self_cell = "1.0.4"
test-log = "0.2.16"
