[package]
name = "talna"
description = "Simple, embeddable time series database"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
authors = ["marvin-j97"]
keywords = ["database", "lsmt", "lsm", "time series", "timeseries"]
categories = ["data-structures", "database-implementations", "algorithms"]
repository = "https://github.com/marvin-j97/talna"
homepage = "https://github.com/marvin-j97/talna"
readme = "README.md"
include = ["src/**/*", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]

[lib]
name = "talna"
path = "src/lib.rs"

[features]
default = []

[dependencies]
byteorder = "1.5.0"
env_logger = "0.11.3"
fjall = { version = "2", default-features = false, features = [
  "lz4",
  "single_writer_tx",
] }
log = "0.4.22"
logos = "0.14.0"
nom = "7.1.3"
nom_locate = "4.2.0"
rand = "0.8.5"
regex = "1.10.5"
rustc-hash = "2.0.0"
self_cell = "1.0.4"
test-log = "0.2.16"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
tempfile = "3.12.0"
test-log = "0.2.16"

[[bench]]
name = "talna"
harness = false
path = "benches/talna.rs"

[package.metadata.cargo-all-features]
denylist = ["all"]
